Adding jvm gc info to archetype scripts